--- a/workspace/06_SEND_EMAIL/.classpath
+++ b/workspace/06_SEND_EMAIL/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/UTENTE9/Desktop/javaAPI/javamail-1.4.5/mail.jar"/>
+	<classpathentry kind="lib" path="C:/Users/UTENTE9/Desktop/jars/commons-lang3-3.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/UTENTE9/Desktop/jars/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/Users/UTENTE9/Desktop/jars/velocity-engine-core-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
