--- a/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\UTENTE9\\Desktop\\corso_java\\corso_java\\workspace\\UserManagementPersistence","type":"PROJECT","hints":{"PROJECT_NAME":"UserManagementPersistence"}},"org.proximainformatica:PersistenceUsers:0.0.1"],[{"location":"C:\\Program Files\\Java\\jdk1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"]]
