--- a/workspace/CryptocurrencyValues/pom.xml
+++ b/workspace/CryptocurrencyValues/pom.xml
@@ -10,11 +10,6 @@
 	<name>CryptocurrencyValues</name>
 	<url>http://maven.apache.org</url>
 
-	<properties>
-		<env>hibernate</env>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
 	<build>
 		<resources>
 			<resource>
@@ -25,11 +20,6 @@
 
 	<dependencies>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.6</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -44,21 +34,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>net.sourceforge.htmlunit</groupId>
-			<artifactId>htmlunit</artifactId>
-			<version>2.29</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.0</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.2.13.Final</version>
+			<groupId>org.proxima</groupId>
+			<artifactId>CryptocurrencyPersistence</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
 	</dependencies>
 </project>
