persistence litecoin bitcoin todb

--- a/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\UTENTE9\\.m2\\repository\\log4j\\log4j\\1.2.17\\log4j-1.2.17.jar","type":"JAR","hints":{}},"log4j:log4j:1.2.17"]]
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"],[{"location":"C:\\Users\\UTENTE9\\Desktop\\corso_java\\corso_java\\workspace\\CryptocurrencyValues","type":"PROJECT","hints":{"PROJECT_NAME":"CryptocurrencyValues"}},"org.proxima:CryptocurrencyValues:0.0.1"]]
