chartjs day, month

--- a/workspace/CryptocurrencyWeb/src/main/webapp/WEB-INF/web.xml
+++ b/workspace/CryptocurrencyWeb/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,26 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+	<servlet>
+		<servlet-name>GetBitcoinLastDay</servlet-name>
+		<display-name>GetBitcoinLastDay</display-name>
+		<description></description>
+		<servlet-class>main.GetBitcoinLastDay</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>GetBitcoinLastMonth</servlet-name>
+		<display-name>GetBitcoinLastMonth</display-name>
+		<description></description>
+		<servlet-class>main.GetBitcoinLastMonth</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetBitcoinLastDay</servlet-name>
+		<url-pattern>/GetBitcoinLastDay</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>GetBitcoinLastMonth</servlet-name>
+		<url-pattern>/GetBitcoinLastMonth</url-pattern>
+	</servlet-mapping>
 <!--   <display-name>Archetype Created Web Application</display-name> -->
 <!--   <servlet> -->
 <!--   	<servlet-name>GetBitcoin</servlet-name> -->
