--- a/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\UTENTE9\\.m2\\repository\\log4j\\log4j\\1.2.17\\log4j-1.2.17.jar","type":"JAR","hints":{}},"log4j:log4j:1.2.17"],[{"location":"C:\\Users\\UTENTE9\\.m2\\repository\\org\\slf4j\\slf4j-api\\1.7.25\\slf4j-api-1.7.25.jar","type":"JAR","hints":{}},"org.slf4j:slf4j-api:1.7.25"]]
